--- a/.env.example
+++ b/.env.example
@@ -5,7 +5,6 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL=
-SHADOW_DATABASE_URL=
 
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
@@ -13,6 +12,7 @@ GITHUB_CLIENT_SECRET=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
+# For production, https://next-auth.js.org/getting-started/example#deploying-to-production
 NEXTAUTH_URL=
 
 SECRET=
